--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!--first section-->
         <div class="sectionOne">
             <div class="header">
-                <p id="hLogo">travel blog</p>
+                <p id="hLogo">travel blog</a>
                 <div class="links">
-                    <p id="smaller">about</p>
-                    <p id="smaller">blogs</p>
-                    <p id="smaller">contact</p>
+                    <a href="https://www.theodinproject.com/" id="smaller">about</a>
+                    <a href="https://github.com/seeunnnie/csproject" id="smaller">blogs</a>
+                    <a href="https://github.com/seeunnnie" id="smaller">contact</a>
                 </div>    
             </div>
             <div class="first">
